login feature commit

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,10 +14,10 @@
                     <li><a href="controleur.php?page=home">Accueil</a></li>
                     <li><a href="controleur.php?page=asr&action=read">Liste communes</a></li>
                     <li><a href="controleur.php?page=user&action=read">Voir les comptes</a></li>
-                    {% if session.user is defined %}
+                    {% if session.username is defined %}
                         <li><a href="controleur.php?page=user&action=logout">Déconnexion</a></li>
                     {% else %}
-                        <li><a href="controleur.php?page=user&action=create">Inscription</a></li>
+                    <li><a href="controleur.php?page=user&action=create">Inscription</a></li>
                         <li><a href="controleur.php?page=user&action=login">Connexion</a></li>
                     {% endif %}
                 </ul>
