--- a/templates/user/inscription.html.twig
+++ b/templates/user/inscription.html.twig
@@ -8,10 +8,14 @@
     <input type="text" id="username" name="username" required>
     
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
+    <input type="email" id="email" name="email" value="@sdea.fr" pattern=".+@sdea\.fr$" required>
     
     <label for="password">Mot de passe:</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[\W_]).{6,}" required>
+    <p id="passwordLengthCondition" style="color: red;">Doit contenir au moins 6 caractères.</p>
+    <p id="passwordUppercaseCondition" style="color: red;">Doit contenir au moins une majuscule.</p>
+    <p id="passwordNumberCondition" style="color: red;">Doit contenir au moins un chiffre.</p>
+    <p id="passwordSpecialCondition" style="color: red;">Doit contenir au moins un caractère spécial.</p>
     
     <input type="submit" value="S'inscrire">
 </form>
@@ -19,5 +23,14 @@
 {# lien retourner a la page d'accueil #}
 
 <a href="controleur.php?page=home">Retour à l'accueil</a>
+
+<script>
+    document.getElementById('password').addEventListener('input', function() {
+        document.getElementById('passwordLengthCondition').style.color = this.value.length >= 6 ? 'green' : 'red';
+        document.getElementById('passwordUppercaseCondition').style.color = /[A-Z]/.test(this.value) ? 'green' : 'red';
+        document.getElementById('passwordNumberCondition').style.color = /\d/.test(this.value) ? 'green' : 'red';
+        document.getElementById('passwordSpecialCondition').style.color = /[\W_]/.test(this.value) ? 'green' : 'red';
+    });
+</script>
     
 {% endblock %}
