--- a/templates/user/view.html.twig
+++ b/templates/user/view.html.twig
@@ -28,4 +28,5 @@
             {% endfor %}
         </tbody>
         <h3><a href="controleur.php?page=user&action=create">Ajouter</a> un utilisateur</h3>
+    </table>
 {% endblock %}
