--- a/templates/admin/back-office.html.twig
+++ b/templates/admin/back-office.html.twig
@@ -37,7 +37,7 @@
                             {% if session.role_id == 1 %}
                                 <button class="save-btn" data-id="{{ user.id }}">Valider</button>
                                 <a href="controleur.php?page=user&action=delete&id={{user.id}}">Supprimer</a>
-                                <p class="message" data-id="{{ user.id }}" style="display: none;"></p> <!-- Ajouté -->
+                                <p class="message" data-id="{{ user.id }}" style="display: none;"></p> 
                             {% endif %}
                         </td>
                     </tr>
