--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,7 @@
                     <li><a href="controleur.php?page=home">Accueil</a></li>
                     <li><a href="controleur.php?page=asr&action=read">Liste communes</a></li>
                     <li><a href="controleur.php?page=documents&action=read">Liste documents</a></li>
+                    <li><a href="controleur.php?page=categories&action=read">Liste categories</a></li>
                     {% if session.role_id == 1 %}
                     <li><a href="controleur.php?page=admin&action=read">back-office</a></li>
                     {# <li><a href="controleur.php?page=user&action=read">Voir les comptes</a></li> #}
