--- a/templates/documents/document_index.html.twig
+++ b/templates/documents/document_index.html.twig
@@ -4,6 +4,9 @@
 
     <h1>Liste doc</h1>
 
+    {# lien pour crrer un dossier #}
+    <a href="controleur.php?page=documents&action=uploadedToday">Créer</a>
+
     <!-- Ajoutez ce formulaire pour choisir le nombre de documents par page -->
     <form method="POST" action="controleur.php?page=documents&action=read">
         <label for="limit">Documents par page :</label>
