--- a/templates/documents/document_detail.html.twig
+++ b/templates/documents/document_detail.html.twig
@@ -7,7 +7,7 @@
 
 <h2>Communes liées</h2>
 <ul>
-    {% for commune in communes %}
+    {% for commune in asr %}
     <li>{{ commune.nom }}</li>
     {% endfor %}
 </ul>
