Securisation formulaire / fichier htaccess

--- a/templates/admin/back-office.html.twig
+++ b/templates/admin/back-office.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <a href="#" id="link1" class="active">Gestion comptes</a>
+    {# <a href="#" id="link1" class="active">Gestion comptes</a>
     <a href="#" id="link2">Gestion categories</a>
-    <a href="#" id="link3">Gestion communes</a>
+    <a href="#" id="link3">Gestion communes</a> #}
 
     <div id="content1">
         <h1>Bienvenue sur la liste des comptes</h1>
@@ -48,12 +48,12 @@
     </table>
     </div>
 
-    <div id="content2" style="display: none;">
+    {# <div id="content2" style="display: none;">
         <h1>OUI</h1>
     </div>
     <div id="content3" style="display: none;">
         <h1>NON</h1>
-    </div>
+    </div> #}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
