--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                     <li><a href="controleur.php?page=documents&action=read">Liste documents</a></li>
                     <li><a href="controleur.php?page=categories&action=read">Liste categories</a></li>
                     {% if session.role_id == 1 %}
-                    <li><a href="controleur.php?page=admin&action=read">back-office</a></li>
+                    <li><a href="controleur.php?page=admin&action=read">Gerer les utilisateurs</a></li>
                     {# <li><a href="controleur.php?page=user&action=read">Voir les comptes</a></li> #}
                     {% endif %}
                     {% if session.username is defined %}
