--- a/templates/user/connexion.html.twig
+++ b/templates/user/connexion.html.twig
@@ -11,6 +11,9 @@
     <input type="submit" value="Se connecter">
 </form>
 
+<p>Pas de compte ? Créer un compte <a href="controleur.php?page=user&action=create"><strong>ici</strong></a></p>
+
+
 {% if errorMessageLog is defined %}
     <p>{{ errorMessageLog }}</p>
 {% endif %}
