--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,41 +10,22 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
-    </head>
-    <body>
+        <script src="https://cdn.tailwindcss.com"></script>
         <style>
             body {
                 font-family: 'Poppins', sans-serif;
             }
         </style>
-        <header>
-            {# lien nav permetant de joindre les diffentes pages #}
-            <nav>
-                <ul>
-                    <li><a href="controleur.php?page=home">Accueil</a></li>
-                    <li><a href="controleur.php?page=asr&action=read">Liste communes</a></li>
-                    <li><a href="controleur.php?page=documents&action=read">Liste documents</a></li>
-                    <li><a href="controleur.php?page=categories&action=read">Liste categories</a></li>
-                    {% if session.role_id == 1 %}
-                    <li><a href="controleur.php?page=admin&action=read">Gerer les utilisateurs</a></li>
-                    {# <li><a href="controleur.php?page=user&action=read">Voir les comptes</a></li> #}
-                    {% endif %}
-                    {% if session.username is defined %}
-                        <li><a href="controleur.php?page=user&action=logout">Déconnexion</a></li>
-                    {% else %}
-                        <li><a href="controleur.php?page=user&action=login">Connexion</a></li>
-                    {% endif %}
-                </ul>
-        </header>
+    </head>
+    <body class="bg-gray-100">
+        <div class="flex">
+            <header>
+                {% include 'sidebar.html.twig' %}
+            </header>
 
-        <main>
-            {% block body %}{% endblock %}
-        </main>
-
-        <footer>
-            {% block footer %}{% endblock %}
-        </footer>
-
-        {% block javascripts %}{% endblock %}
+            <main class="flex-grow">
+                {% block body %}{% endblock %}
+            </main>
+        </div>
     </body>
 </html>
