--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Bienvenue sur l'accueil !</h1>
+    <h1 class="text-3xl font-bold underline">Bienvenue sur l'accueil !</h1>
 {% endblock %}
